<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Noteworthy</string>
    <string name="hello_world">This will show me Michaels add course activity</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="enter_email">Enter your email address</string>
    <string name="enter_username">Create a username</string>
    <string name="enter_password">Create a password</string>
    <string name="email_hint">abc.123@mymail.com</string>
    <string name="done">Done!</string>
    <string name="title_activity_test">Test</string>
    <string name="ok">OK</string>
    <string name="invalid">"Invalid username or password</string>
    <string name="title_activity_classes">Classes</string>
    <string name="add_stuff">Add A Class or Note</string>
    <string name="title_activity_add_class">AddClass</string>
    <string name="title_school">School</string>
    <string name="title_course">Course</string>
    <string name="title_professor">Professor</string>
    <string name="emptyList">No Classes</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="contributions">Contributions</string>
    <string name="credits">Credits</string>
    <string name="logout">Logout</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="camera">Take a picture</string>
    <string name="title_activity_contributor_adapter">ContributorAdapter</string>
    <string name="add_notes">Add Notes</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_note_description">NoteDescription</string>
    <string name="noteTitle">NoteDescription</string>

</resources>
