<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.noteworthy.Profile$PlaceholderFragment" 
    android:orientation="vertical"
    android:background="@color/white">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#000000">
        
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="bottom">
        
       <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/profile_button"
        android:gravity="bottom"
        android:layout_marginBottom="3dp"
        android:text="@string/contributions"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:paddingLeft="6.5dp"/>
    
        <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/profile_button"
        android:gravity="bottom"
        android:layout_marginBottom="3dp"
        android:text="@string/credits"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:paddingLeft="6.5dp"/>
        
        <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/logout"
        android:gravity="bottom"
        android:text="@string/logout"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        android:layout_gravity="center"
        android:paddingLeft="6.5dp"/>
        </LinearLayout>

</LinearLayout>
